--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,3 +2,17 @@
 <div class="container">
     Welcome {{name}}. you can manage your todos <a routerLink="/todos">here</a>
 </div>
+<div class="container">
+        Click here to get a customized welcome message
+        <button (click)="getWelcomeMessage()" class="btn btn-success">Get Welcome Message</button>
+    </div>
+
+    <div class="container">
+        Click here to get a customized welcome message
+        <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">Get Welcome Message</button>
+    </div>
+
+    <div class="container">
+        <h2>Your Customized Welcome Message</h2>
+        {{welcomeMessageFromService}}
+    </div>
